# gercom_fext-dp-one-tree

./: .gitignore  Makefile  README.md  pyproject.toml  teste.py
app/: cli.py  client.py  run.py  server.py  server_utils.py  settings.py  utils.py
fedt/: README.md
fedt/app/: app_config.toml  client.py  client_utils.py  server.py  server_strategy.py  server_utils.py  settings.py  utils.py
fedt/service/: fedT.proto  fedT_pb2.py  fedT_pb2.pyi  fedT_pb2_grpc.py
