[build-system]
requires = [
    "setuptools>=68.0", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fext-dp"
version = "0.2.0"
description = "Federated Learning for Decision Trees with Differential Privacy"
authors = [{ name = "Julio C. Oliveira", email = "julio3.oliveir@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.2.3",
    "scikit-learn @ file:///home/julio/documents/github//scikit-learn-dp",
    "protobuf>=6.33.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "mypy-protobuf>=3.6.0",
    "colorlog>=6.10.1",
    "psutil>=7.1.3",
    "matplotlib>=3.10.7",
    "pydantic>=2.13.3"
]

[tool.setuptools]
packages = ["fedt", "scripts"]